# ghosty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRODUCT.md  README.md  SECURITY.md  install.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: resources.md
export-sessions-ghosty/: README.md  auto-handoff.sh  export-28-06-2026-07-59-ghosty.md  export-28-06-2026-08-01-ghosty.md
ghosty/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  ghosty-cheatsheet.md  install.py  pyproject.toml
ghosty/.github/ISSUE_TEMPLATE/: feature_request.md
ghosty/.github/workflows/: ci.yml
ghosty/scripts/: gen_gif.py
ghosty/src/ghosty/: app.py  dispatcher.py  state.py  state_log.py  telemetry.py  theme.py
ghosty/src/ghosty/screens/: __init__.py  catalog.py  detail.py  home.py  replay.py  run.py
ghosty/src/ghosty/widgets/: __init__.py  action_card.py  progress_grid.py
nativeapp/: README.md
nativeapp-swift/: Package.swift
nativeapp-swift/Sources/GhostyCompanion/: main.swift
nativeapp/Config/: Shared.xcconfig
nativeapp/MyProject/: MyProject.xctestplan  MyProjectApp.swift
nativeapp/MyProject.xcodeproj/: project.pbxproj
nativeapp/MyProject.xcodeproj/xcshareddata/xcschemes/: MyProject.xcscheme
nativeapp/MyProject.xcworkspace/: contents.xcworkspacedata
nativeapp/MyProjectPackage/: Package.swift
nativeapp/MyProjectPackage/Sources/MyProjectFeature/: ContentView.swift
nativeapp/MyProjectUITests/: MyProjectUITests.swift
scripts/: gen_frames.py  gen_gif.py
src/ghosty/: __init__.py  app.py  cli.py  runner.py  theme.py
src/ghosty/backends/: __init__.py  brew.py  defaults.py  launchctl.py  system.py
src/ghosty/catalog/: __init__.py
src/ghosty/screens/: catalog.py  detail.py  doctor.py  home.py  replay.py  run.py
src/ghosty/widgets/: action_card.py  progress_grid.py
src/phantom/: __init__.py  app.py  cli.py  runner.py  theme.py
src/phantom/catalog/: __init__.py
src/phantom/screens/: __init__.py  catalog.py  detail.py  doctor.py  home.py  replay.py  run.py
src/phantom/widgets/: __init__.py  action_card.py  progress_grid.py  status_bar.py
tests/: cli.bats  test_catalog.py
