[project]
name = "ghosty-cli"
version = "2.0.2"
description = "Apple-grade macOS privacy & security TUI built on Textual"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Krishna Suresh CPA", email = "krishnasureshcpa@users.noreply.github.com" }]
keywords = ["macos", "privacy", "security", "tui", "textual", "rich", "apple-silicon", "hardening"]
classifiers = [
    "Environment :: Console :: Curses",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "textual>=0.85,<2",
    "rich>=13.9,<15",
    "click>=8.1,<9",
    "pydantic>=2.7,<3",
]

[project.urls]
"Homepage"        = "https://github.com/krishnasureshcpa/ghosty"
"Bug Tracker"     = "https://github.com/krishnasureshcpa/ghosty/issues"
"Source"          = "https://github.com/krishnasureshcpa/ghosty"
"Cheat sheet"     = "https://github.com/drduh/macOS-Security-and-Privacy-Guide"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghosty"]

[project.scripts]
ghosty = "ghosty.cli:main"
ghost  = "ghosty.cli:main"    # shorter alias
gho    = "ghosty.cli:main"    # shortest alias

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "textual[dev]>=0.85",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["demo", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM117"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/ghosty"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
